--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,14 +26,6 @@ jobs:
         pip install coverage
         coverage run -m unittest
         coverage xml
-    - name: Upload coverage to Codecov
+
+    - name: Publish test coverage
       uses: codecov/codecov-action@v1
-      with:
-        file: ./coverage.xml
-        directory: ./coverage/reports/
-        flags: unittests
-        env_vars: OS,PYTHON
-        name: codecov-umbrella
-        fail_ci_if_error: true
-        path_to_write_report: ./coverage/codecov_report.txt
-        verbose: true
