moving python code into sub-directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
 # ignore PyCharm IDE files
 .idea
 
+## Python related files
+
 # ignore virtual environments
-venv
+python/venv
 
 # ignore build files
 *.pyc
 **/__pycache__
-build
-dist
-tempo.egg-info/*
-spark-warehouse/*
-htmlcov/*
+python/build
+python/dist
+python/tempo.egg-info/*
+python/spark-warehouse/*
+python/htmlcov/*
 .coverage
 coverage.xml
 
