--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: build
 on:
   push:
-    branches: [master]
+    branches: [master, scala_refactor]
 jobs:
   run:
     runs-on: ${{ matrix.os }}
@@ -22,7 +22,7 @@ jobs:
         export SPARK_LOCAL_IP=127.0.0.1
     - name: Generate coverage report
       run: |
-        pip install -r requirements.txt
+        pip install -r python/requirements.txt
         pip install coverage
         coverage run -m unittest
         coverage xml
