fix working subdir

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,8 @@ jobs:
         pip install -r python/requirements.txt
         pip install coverage
         python -m unittest discover python
-        cd python ; coverage xml
+        cd python
+        coverage xml
 
     - name: Publish test coverage
       uses: codecov/codecov-action@v1
