Make Scala Refactor new Master state (#56)
* moving python code into sub-directory

* Basic module framework for Scala implementation

* Refactored code into both:
* SeqDF - Sequenced DataFrames
* TSDF - Timeseries DataFrames

* Helpers to defined alignment-oriented windows (leading, centered, trailing) and handling of conversions from Durations/Periods (from java.time) to correspondingly sized windows

* First cut at refactoring Scala version

* Refactored TSDF classes

* validation of args to BaseTSDF, additional utility constructors

* add stub unit test for AS OF join

* adding unit test stub for asof join

* renamed to databrickslabs to avoid githook issues

* committing resample unit tests

* removing target folder files

* Add asof Join functionality (#53)

* Added RangeStats + EMA capabilities (#54)

* Added RangeStats capability

* Added EMA capability + tests

* Some clean up

* commiting describe code changes

* commiting describe test

* commiting describe test without config classes

* adding tests and TSDF for describe

* add delta writer

* delta

* build sbt

* pushing extra mirrored df features

* adding mirrored df features

* adding test file

* adding Python describe

* adding Python describe

* adding vwap functionality

* removing print code

* adding comments to all objects in the project

* adding Delta write changes

* committing all scala/python changes for potential missing values in partitioned as of and others

* adding as of join logic for max lookback

* fixed unit test and added sparksessionwrapper

* removed print

* add unpersist to cached data frame

* option for external table path for write to Delta Lake

* Defining implicit transformer functions that will convert regular Spark DataFrames to TSDFs

* removing build artifacts and coverage reports

* refactoring to use TSDF windowing functions

* sparksessionwrapper

* BUGFIX: baseWindow should 

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: build
 on:
   push:
-    branches: [master]
+    branches: [master, scala_refactor]
 jobs:
   run:
     runs-on: ${{ matrix.os }}
@@ -21,10 +21,11 @@ jobs:
       run: |
         export SPARK_LOCAL_IP=127.0.0.1
     - name: Generate coverage report
+      working-directory: ./python
       run: |
         pip install -r requirements.txt
         pip install coverage
-        coverage run -m unittest
+        coverage run -m unittest 
         coverage xml
 
     - name: Publish test coverage
