--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ coverage.xml
 scala/tempo/target
 scala/tempo/project/target/
 scala/tempo/project/project/target/
+.bsp
 
 # local delta tables
 **/spark-warehouse
