feat(interpolation): add support for multuple partitions, and target columns

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# ignore IntelliJ/PyCharm IDE files
+# ignore IntelliJ/PyCharm/VSCode IDE files
 .idea
 *.iml
+.vscode
+
 
 # coverage files
 .coverage
