chore: update branches in test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: build
 on:
   push:
-    branches: [master, scala_refactor,troubleshooting]
+    branches: [master, scala_refactor]
 jobs:
   run:
     runs-on: ${{ matrix.os }}
