--- a/.github/workflows/onrelease.yml
+++ b/.github/workflows/onrelease.yml
@@ -34,7 +34,7 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: pip install -U -r dev-requirements.txt
+        run: pip install -U -r requirements.txt
 
       - name: Build dist
         run: python setup.py clean bdist_wheel
