--- a/.github/workflows/onrelease.yml
+++ b/.github/workflows/onrelease.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [ 3.9 ]
+        python-version: [ 3.7 ]
         os: [ ubuntu-latest ]
 
     steps:
@@ -34,9 +34,11 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: pip install -U -r dev-requirements.txt
+        working-directory: ./python
+        run: pip install -U -r requirements.txt
 
       - name: Build dist
+        working-directory: ./python
         run: python setup.py clean bdist_wheel
 
       - name: Publish a Python distribution to PyPI
@@ -44,16 +46,4 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.LABS_PYPI_TOKEN }}
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Release for version ${{ github.ref }}. Please refer to CHANGELOG.md for detailed information.
-          draft: false
-          prerelease: false
+          packages_dir: python/dist/
