Adding job to build docs & upload to github pages

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,36 @@ on:
   push:
     branches: '*'
 jobs:
+  build-docs:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: '3.9'
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Copy Requirements
+        uses: canastro/copy-file-action@master
+        with:
+          source: "python/requirements.txt"
+          target: "docs/requirements.txt"
+      - name: Build HTML
+        uses: ammaraskar/sphinx-action@0.4
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: html-docs
+          path: docs/_build/html/
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/master'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/build/html
+
   run:
     runs-on: ${{ matrix.os }}
     strategy:
