--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Install Git
+        run: 'apt-get install git'
       - name: Copy Requirements
         uses: canastro/copy-file-action@master
         with:
