--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Git
         run: 'sudo apt-get install -y git'
+      - name: Test Git
+        run: 'git describe --abbrev=0 --tags'
       - name: Copy Requirements
         uses: canastro/copy-file-action@master
         with:
