--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,7 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Install Git
-        run: 'sudo apt-get install -y git'
-      - name: Test Git
+      - name: Config Git
         run: |
           # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
           git --version
@@ -24,7 +22,7 @@ jobs:
           git config user.email "<>"
           git status
           git tag
-          git describe
+          git describe --abbrev=0 --tags
       - name: Copy Requirements
         uses: canastro/copy-file-action@master
         with:
