--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-          git describe --abbrev=0 --tags
+          git describe --abbrev=0 --tags --always
       - name: Copy Requirements
         uses: canastro/copy-file-action@master
         with:
