Calling docs Makefile directly (not using GH action)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,9 @@ jobs:
           source: "python/requirements.txt"
           target: "docs/requirements.txt"
       - name: Build HTML
-        uses: ammaraskar/sphinx-action@0.4
+        run: |
+          cd ./docs/
+          make html
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
