--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,7 @@ name: docs
 
 on:
   push:
-    branches: ['*']
+    branches: [ '*' ]
 
 jobs:
   build-docs:
@@ -32,9 +32,9 @@ jobs:
           source: "python/requirements.txt"
           target: "docs/requirements.txt"
       - name: Build HTML
-        run: |
-          cd ./docs/
-          make html
+        uses: ammaraskar/sphinx-action@0.4
+        with:
+          pre-build-command: "apt-get update -y && apt-get install -y git"
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
