--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,8 @@ name: docs
 
 on:
   push:
-    branches: [ '*' ]
+    tags:
+      - 'v*' # only release a versioned tag, such as v.X.Y.Z
 
 jobs:
   build-docs:
@@ -42,7 +43,7 @@ jobs:
           path: docs/_build/html/
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
-        # if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html
