test without git config

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,7 @@ name: docs
 
 on:
   push:
-    tags:
-      - 'v*' # only release a versioned tag, such as v.X.Y.Z
+    branches: [ '*' ]
 
 jobs:
   build-docs:
@@ -20,13 +19,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: '0'
-      - name: Config Git
-        run: |
-          # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
-          git --version
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          git describe --abbrev=0 --tags
       - name: Copy Requirements
         uses: canastro/copy-file-action@master
         with:
@@ -43,7 +35,7 @@ jobs:
           path: docs/_build/html/
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+        # if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html
