testing updated build workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,8 @@
 name: build
 
 on:
-  pull_request:
-    types: [ opened, synchronize ]
   push:
-    branches: [ master ]
+    branches: [ '*' ]
 
 jobs:
   run:
