run build only on pull requests, and pushing to master not on every push

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,10 @@
 name: build
 
 on:
+  pull_request:
+    types: [ opened, synchronize ]
   push:
-    branches: [ '*' ]
+    branches: [ master ]
 
 jobs:
   run:
