--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,7 +37,7 @@ jobs:
           path: docs/_build/html/
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
-        #if: $${{ github.ref }} == 'refs/heads/master'
+        if: $${{ github.ref }} == 'refs/heads/fix_docs_build'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html
