--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,9 +3,8 @@ name: docs
 
 on:
   push:
-    branches: [ '*' ]
-    #tags:
-    #  - 'v*' # only release a versioned tag, such as v.X.Y.Z
+    tags:
+      - 'v*' # only release a versioned tag, such as v.X.Y.Z
 
 jobs:
   build-docs:
@@ -37,7 +36,7 @@ jobs:
           path: docs/_build/html/
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
-        if: $${{ github.ref }} == 'refs/heads/fix_docs_build'
+        if: $${{ github.ref }} == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html
