--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,11 @@
 name: build
+
 on:
   push:
-    branches: '*'
+    branches: [ '*' ]
+  pull_request:
+    branches: [ 'master' ]
+
 jobs:
   run:
     runs-on: ${{ matrix.os }}
