--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,14 @@ on:
     branches: [ 'master' ]
 
 jobs:
-  lint:
+  black-linting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
+        with:
+          options: "--check --verbose"
+          src: "./python"
   run:
     runs-on: ${{ matrix.os }}
     strategy:
