chore(flake8): fix typo

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: flake8 Lint
         uses: py-actions/flake8@v2
         with:
-          arg: "--config python/.flake8"
+          args: "--config python/.flake8"
           path: "./python"
   run:
     runs-on: ${{ matrix.os }}
