apply black on most recent changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,8 @@ jobs:
         with:
           args: "--config python/.flake8"
           path: "./python"
-  run:
+  test:
+    name: Buid and Test Module
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
