latest coveragerc file

--- a/python/.coveragerc
+++ b/python/.coveragerc
@@ -8,6 +8,9 @@ exclude_lines =
     pragma: no cover
     raise NotImplementedError
     if __name__ == .__main__.:
+    import
+    from
+    if TYPE_CHECKING:
 
 ignore_errors = True
 
