--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           options: "--check --verbose"
           src: "./python"
+          version: "23.3.0"
   flake8-lint:
     runs-on: ubuntu-latest
     name: Flake8 Lint
