--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -16,7 +16,7 @@ sphinx-autobuild==2021.3.14
 furo==2023.3.27
 sphinx-copybutton==0.5.1
 Sphinx==6.1.3
-sphinx-design==0.2.0
+sphinx_design==0.3.0
 sphinx-panels==0.6.0
 jsonref==1.0.1
 python-dateutil==2.8.2
