Need to mark the github workspace as "safe" for the Sphinx build to work correctly

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: '0'
+          set-safe-directory: $GITHUB_WORKSPACE
       - name: Copy Requirements
         uses: canastro/copy-file-action@master
         with:
