Test docs build without deploying

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,9 +35,9 @@ jobs:
         with:
           name: html-docs
           path: docs/_build/html/
-      - name: Deploy 🚀
-        uses: peaceiris/actions-gh-pages@v3
-        if: $${{ github.ref }} == 'refs/heads/master'
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/html
+#      - name: Deploy 🚀
+#        uses: peaceiris/actions-gh-pages@v3
+#        if: $${{ github.ref }} == 'refs/heads/master'
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          publish_dir: docs/_build/html
