--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,7 +5,6 @@ on:
   push:
     tags:
       - 'v*' # only release a versioned tag, such as v.X.Y.Z
-    branches: ['*']
 
 jobs:
   build-docs:
@@ -21,7 +20,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: '0'
-          set-safe-directory: $GITHUB_WORKSPACE
       - name: Copy Requirements
         uses: canastro/copy-file-action@master
         with:
@@ -36,9 +34,9 @@ jobs:
         with:
           name: html-docs
           path: docs/_build/html/
-#      - name: Deploy 🚀
-#        uses: peaceiris/actions-gh-pages@v3
-#        if: $${{ github.ref }} == 'refs/heads/master'
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          publish_dir: docs/_build/html
+      - name: Deploy 🚀
+        uses: peaceiris/actions-gh-pages@v3
+        if: $${{ github.ref }} == 'refs/heads/master'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/_build/html
