Need to mark source directory as "safe" for git to perform actions during docs build (#314)
* Need to mark the github workspace as "safe" for the Sphinx build to work correctly

* Test docs build without deploying

* Test docs build without deploying

* trying to mark workspace as "safe"

* removing test conditions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build HTML
         uses: ammaraskar/sphinx-action@0.4
         with:
-          pre-build-command: "apt-get update -y && apt-get install -y git"
+          pre-build-command: "apt-get update -y && apt-get install -y git && git config --global --add safe.directory /github/workspace"
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
