update required coverage versions to be more flexible

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -28,7 +28,7 @@ deps =
     pyspark321: pyspark==3.2.1
     pyspark330: pyspark==3.3.0
     pyspark332: pyspark==3.3.2
-    coverage==6.5.0
+    coverage>=7,<8
     -rrequirements.txt
 commands =
     python -m unittest discover -s tests -p '*_tests.py'
