--- a/python/tox.ini
+++ b/python/tox.ini
@@ -31,7 +31,7 @@ deps =
     coverage>=7,<8
     -rrequirements.txt
 commands =
-    python -m unittest discover -s tests -p '*_tests.py'
+    coverage run -m unittest discover -s tests -p '*_tests.py'
 
 [testenv:format]
 description = run formatters
