add coverage report env to tox config

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -71,6 +71,19 @@ deps =
 commands =
     python -m build --sdist --wheel {posargs: {toxinidir}}
 
+[testenv:coverage-report]
+deps = coverage
+skipdist = true
+skip_install = true
+commands =
+    coverage combine
+    coverage report -m
+    coverage xml
+
+[coverage:run]
+source = tempo
+parallel = true
+
 [flake8]
 exclude =
     .git
