update coverage-report description

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -72,6 +72,7 @@ commands =
     python -m build --sdist --wheel {posargs: {toxinidir}}
 
 [testenv:coverage-report]
+description = combine coverage data and generate reports
 deps = coverage
 skipdist = true
 skip_install = true
