update a env name for type checking

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -53,7 +53,7 @@ commands =
     black --check {toxinidir}
     flake8
 
-[testenv:type]
+[testenv:type-check]
 description = run type checks
 ; todo - configure mypy
 skipsdist = true
