update type default env to type-check
this matches the actual env name since type was renamed to type-check

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -7,7 +7,7 @@ isolated_build = true
 envlist =
     format
     lint
-    type
+    type-check
     build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
