move all flake8 configs to tox.ini file
flake8 was returning different results locally in virtual env and using tox. This is because the configuration in tox.ini takes precedence over the .flake8 config file. In addition, flake8 no longer supports a global config file after version 4

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -52,7 +52,7 @@ deps =
     black
 commands =
     black --check {toxinidir}
-    flake8
+    flake8 {toxinidir}
 
 [testenv:type-check]
 description = run type checks
@@ -87,6 +87,17 @@ source = tempo
 parallel = true
 
 [flake8]
+max-line-length = 88
+builtins = dbutils
+extend-ignore =
+    # Line too long (88 characters) (E501)
+    E501,
+    # Name may be undefined, or defined from star imports: module (F405)
+    F405,
+    # Invalid escape sequence 'x' (W605)
+    W605,
+    # 'from module import *' used; unable to detect undefined names (F403)
+    F403
 exclude =
     .git
     __pycache__
@@ -102,7 +113,4 @@ exclude =
     .mypy_cache
     .pytest_cache
     dbl_tempo.egg-info
-max-line-length = 88
-extend-ignore =
-    ; See https://github.com/PyCQA/pycodestyle/issues/373
-    E203
+    .tox
