remove toxinidir from flake8 command

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -52,7 +52,7 @@ deps =
     black
 commands =
     black --check {toxinidir}
-    flake8 {toxinidir}
+    flake8
 
 [testenv:type-check]
 description = run type checks
