--- a/python/tox.ini
+++ b/python/tox.ini
@@ -61,6 +61,9 @@ skipsdist = true
 skip_install = true
 deps =
     mypy
+    pandas-stubs>=2,<3
+    types-pytz>=2023,<2024
+    -rrequirements.txt
 commands =
     mypy {toxinidir}/tempo
 
