--- a/python/tox.ini
+++ b/python/tox.ini
@@ -56,11 +56,10 @@ commands =
 
 [testenv:type-check]
 description = run type checks
-; todo - configure mypy
 skipsdist = true
 skip_install = true
 deps =
-    mypy
+    mypy>=1,<2
     pandas-stubs>=2,<3
     types-pytz>=2023,<2024
     -rrequirements.txt
