--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,8 +66,8 @@ jobs:
     - name: Generate coverage report
       working-directory: ./python
       run: |
-        python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
-        coverage run -m unittest discover -s tests -p '*_tests.py'
-        coverage xml
+        pip install tox
+        tox -e py39-pyspark321
+        tox -e coverage-report
     - name: Publish test coverage
       uses: codecov/codecov-action@v1
