--- a/python/tox.ini
+++ b/python/tox.ini
@@ -32,7 +32,9 @@ deps =
     coverage>=7,<8
     -rrequirements.txt
 commands =
+    coverage --version
     coverage run -m unittest discover -s tests -p '*_tests.py'
+    coverage report -m --data-file .coverage.{envname}
 
 [testenv:format]
 description = run formatters
@@ -74,11 +76,21 @@ deps =
 commands =
     python -m build --sdist --wheel {posargs: {toxinidir}}
 
+[testenv:cov-init]
+setenv =
+    COVERAGE_FILE = .coverage
+commands =
+    coverage erase
+
 [testenv:coverage-report]
 description = combine coverage data and generate reports
-deps = coverage
+deps = coverage>=7,<8
 skipdist = true
 skip_install = true
+setenv =
+    COVERAGE_FILE = .coverage
 commands =
+    coverage --version
+    coverage combine
     coverage report -m
     coverage xml
