the updated GH workflow for previous commit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,6 +68,7 @@ jobs:
       run: |
         python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
         coverage run -m unittest discover -s tests -p '*_tests.py'
+        coverage combine
         coverage xml
     - name: Publish test coverage
       uses: codecov/codecov-action@v1
