--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,9 +64,10 @@ jobs:
         export SPARK_LOCAL_IP=127.0.0.1
         export SPARK_SUBMIT_OPTS="--illegal-access=permit -Dio.netty.tryReflectionSetAccessible=true"
     - name: Generate coverage report
+      working-directory: ./python
       run: |
         python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
-        coverage run -m unittest discover -s python/tests -p '*_tests.py'
+        coverage run -m unittest discover -s tests -p '*_tests.py'
         coverage combine
         coverage xml
     - name: Publish test coverage
