--- a/python/.coveragerc
+++ b/python/.coveragerc
@@ -1,11 +1,8 @@
 [run]
 parallel = True
 branch = True
-source = python/tempo
-omit =
-    python/tests/*_tests.py
-    python/setup.py
-    python/version.py
+source = tempo
+omit = *_tests.py
 
 [report]
 exclude_lines =
