[mypy, coverage] Complete Type Checking for the Project and updates to Coverage configuration (#324)
* update gitignore for pyenv files

* ignore tox files

* hardcode version instead of pulling from gh

importing semver in setup caused an error bc it was being imported before requirements file could install it

* move coverage requirement to tox config

* remove version py file since it's hardcoded in setup

* initial working tox commit

* update required coverage versions to be more flexible

* switch order formatters run

* ignore env specific coverage files

* update tox config to use coverage run instead of base python to execute tests

* add coverage report env to tox config

* update coverage-report description

* update a env name for type checking

* remove black and flake8 from requirments package and into tox envs

* update contributing md file with tox instructions

* add pyenv and tox instructions to CONTRIBUTING md

* Update test.yml

* adding comment to force testing on GH actions

* removing comment to force testing on GH actions

* Update test.yml to fix error caused by typo

* Revert "remove version py file since it's hardcoded in setup"

This reverts commit c41d14049a13a805a30e32c7ca174947c7d53da2.

* Revert "hardcode version instead of pulling from gh"

This reverts commit e0f42e637b8d1472fd975e46182847ba9897c7c6.

* add semver as a dep for testenv in tox ini

* add pyproject toml to install semver as build requirement

* update type default env to type-check

this matches the actual env name since type was renamed to type-check

* move all flake8 configs to tox.ini file

flake8 was returning different results locally in virtual env and using tox. This is because the configuration in tox.ini takes precedence over the .flake8 config file. In addition, flake8 no longer supports a global config file after version 4

* remove toxinidir from flake8 command

* remove all flake8 config from

--- a/python/.coveragerc
+++ b/python/.coveragerc
@@ -1,6 +1,8 @@
 [run]
+parallel = True
 branch = True
 source = tempo
+omit = *_tests.py
 
 [report]
 exclude_lines =
@@ -8,12 +10,8 @@ exclude_lines =
     pragma: no cover
     raise NotImplementedError
     if __name__ == .__main__.:
+    unittest.main()
     import
     from
     if TYPE_CHECKING:
-
-ignore_errors = True
-
-omit =
-    setup.py
-    *tests*
+    pass
