--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,18 @@ jobs:
         with:
           args: "--config python/.flake8"
           path: "./python"
+  type-checks:
+    runs-on: ubuntu-latest
+    name: Type Checks
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Type check
+        run: |
+          pip install tox
+          tox -e type-check
   test:
     name: Buid and Test Module
     runs-on: ${{ matrix.os }}
@@ -56,6 +68,7 @@ jobs:
       run: |
         python -I -m pip install 'coverage<8,>=7' pyspark==3.2.1 -r requirements.txt
         coverage run -m unittest discover -s tests -p '*_tests.py'
+        coverage combine
         coverage xml
     - name: Publish test coverage
       uses: codecov/codecov-action@v1
