--- a/python/tox.ini
+++ b/python/tox.ini
@@ -32,7 +32,9 @@ deps =
     coverage>=7,<8
     -rrequirements.txt
 commands =
+    coverage --version
     coverage run -m unittest discover -s tests -p '*_tests.py'
+    coverage report -m --data-file .coverage.{envname}
 
 [testenv:format]
 description = run formatters
@@ -56,11 +58,13 @@ commands =
 
 [testenv:type-check]
 description = run type checks
-; todo - configure mypy
 skipsdist = true
 skip_install = true
 deps =
-    mypy
+    mypy>=1,<2
+    pandas-stubs>=2,<3
+    types-pytz>=2023,<2024
+    -rrequirements.txt
 commands =
     mypy {toxinidir}/tempo
 
@@ -72,16 +76,21 @@ deps =
 commands =
     python -m build --sdist --wheel {posargs: {toxinidir}}
 
+[testenv:cov-init]
+setenv =
+    COVERAGE_FILE = .coverage
+commands =
+    coverage erase
+
 [testenv:coverage-report]
 description = combine coverage data and generate reports
-deps = coverage
+deps = coverage>=7,<8
 skipdist = true
 skip_install = true
+setenv =
+    COVERAGE_FILE = .coverage
 commands =
+    coverage --version
     coverage combine
     coverage report -m
     coverage xml
-
-[coverage:run]
-source = tempo
-parallel = true
