update linter commands

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -52,8 +52,8 @@ deps =
     flake8
     black
 commands =
-    black --check {toxinidir}
-    flake8
+    black --check {toxinidir}/tempo
+    flake8 --config {toxinidir}/.flake8 {toxinidir}/tempo
 
 [testenv:type-check]
 description = run type checks
