--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,9 +11,9 @@ envlist =
     build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
-    py37-pyspark300,
-    py38-pyspark{312,321},
-    py39-pyspark{330,332}
+    ; py38-pyspark{312,321},
+    ; py39-pyspark{330,332},
+    py10-dbr133
 skip_missing_interpreters = true
 
 
@@ -24,13 +24,14 @@ wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}
 deps =
-    pyspark300: pyspark==3.0.0
-    pyspark312: pyspark==3.1.2
-    pyspark321: pyspark==3.2.1
-    pyspark330: pyspark==3.3.0
-    pyspark332: pyspark==3.3.2
+    ; pyspark312: pyspark==3.1.2
+    ; pyspark321: pyspark==3.2.1
+    ; pyspark330: pyspark==3.3.0
+    ; pyspark332: pyspark==3.3.2
+    dbr133: -rtests/requirements/dbr133.txt
+    -rtests/requirements/dev.txt
     coverage>=7,<8
-    -rrequirements.txt
+    ; -rrequirements.txt
 commands =
     coverage --version
     coverage run -m unittest discover -s tests -p '*_tests.py'
