--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,7 +11,9 @@ envlist =
     build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
-    py10-dbr133
+    py39-dbr122
+    py310-dbr133
+    py310-dbr142
 skip_missing_interpreters = true
 
 
@@ -22,7 +24,9 @@ wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}
 deps =
+    dbr122: -rtests/requirements/dbr122.txt
     dbr133: -rtests/requirements/dbr133.txt
+    dbr142: -rtests/requirements/dbr142.txt
     -rtests/requirements/dev.txt
     coverage>=7,<8
 
