added DBR 10.4 to tox.ini

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,6 +11,7 @@ envlist =
     build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
+    py38-dbr104
     py39-dbr113
     py39-dbr122
     py310-dbr133
@@ -25,6 +26,7 @@ wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}
 deps =
+    dbr104: -rtests/requirements/dbr104.txt
     dbr113: -rtests/requirements/dbr113.txt
     dbr122: -rtests/requirements/dbr122.txt
     dbr133: -rtests/requirements/dbr133.txt
