simplified tox.ini and moved doc requirements to docs dir

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,11 +11,13 @@ envlist =
     build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
-    py38-dbr104
-    py39-dbr113
-    py39-dbr122
-    py310-dbr133
-    py310-dbr142
+    dbr73
+    dbr91
+    dbr104
+    dbr113
+    dbr122
+    dbr133
+    dbr142
 skip_missing_interpreters = true
 
 
@@ -25,12 +27,16 @@ package = wheel
 wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}
+basepython =    
+    dbr142: py310
+    dbr133: py310
+    dbr122: py39
+    dbr113: py39
+    dbr104: py38
+    dbr91: py38
+    dbr73: py37
 deps =
-    dbr104: -rtests/requirements/dbr104.txt
-    dbr113: -rtests/requirements/dbr113.txt
-    dbr122: -rtests/requirements/dbr122.txt
-    dbr133: -rtests/requirements/dbr133.txt
-    dbr142: -rtests/requirements/dbr142.txt
+    -rtests/requirements/{envname}.txt
     -rtests/requirements/dev.txt
     coverage>=7,<8
 
@@ -66,7 +72,7 @@ deps =
     mypy>=1,<2
     pandas-stubs>=2,<3
     types-pytz>=2023,<2024
-    -rrequirements.txt
+    -rtests/requirements/dbr133.txt
 commands =
     mypy {toxinidir}/tempo
 
