--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,13 +11,7 @@ envlist =
     build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
-    dbr73
-    dbr91
-    dbr104
-    dbr113
-    dbr122
-    dbr133
-    dbr142
+    dbr{91,104,113,122,133,142}
 skip_missing_interpreters = true
 
 
