Test code and version support update (#378)
* moved dependencies to requirements subdir

* added delta helper func to configure spark session

* cleaned up comments

* added DBR 12.2 and 14.2

* changed conditional to use isinstance

* added DBR 11.3 to tox.ini

* added DBR 10.4 to tox.ini

* set ingore_metadata=True

* simplified tox.ini and moved doc requirements to docs dir

* added some TODOs

* added DBR 9.1

* updated CONTRIBUTING.md

* fixed test to check for appropriate delta-spark version

* removed useDeltaOpt conditional in io.write

* formatting

* linting

* removed event_time assumption and made zorder contingent on optimizationCols

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -11,9 +11,7 @@ envlist =
     build-dist
     ; Mirror Supported LTS DBR versions here: https://docs.databricks.com/release-notes/runtime/
     ; Use correct PySpark version based on Python version present in env name
-    py37-pyspark300,
-    py38-pyspark{312,321},
-    py39-pyspark{330,332}
+    dbr{91,104,113,122,133,142}
 skip_missing_interpreters = true
 
 
@@ -23,14 +21,19 @@ package = wheel
 wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}
+basepython =    
+    dbr142: py310
+    dbr133: py310
+    dbr122: py39
+    dbr113: py39
+    dbr104: py38
+    dbr91: py38
+    dbr73: py37
 deps =
-    pyspark300: pyspark==3.0.0
-    pyspark312: pyspark==3.1.2
-    pyspark321: pyspark==3.2.1
-    pyspark330: pyspark==3.3.0
-    pyspark332: pyspark==3.3.2
+    -rtests/requirements/{envname}.txt
+    -rtests/requirements/dev.txt
     coverage>=7,<8
-    -rrequirements.txt
+
 commands =
     coverage --version
     coverage run -m unittest discover -s tests -p '*_tests.py'
@@ -63,7 +66,7 @@ deps =
     mypy>=1,<2
     pandas-stubs>=2,<3
     types-pytz>=2023,<2024
-    -rrequirements.txt
+    -rtests/requirements/dbr133.txt
 commands =
     mypy {toxinidir}/tempo
 
